[package]
name = "anawt"
version = "0.1.0"
edition = "2024"
description = "All names were taken"
repository = "https://github.com/pliduino/anawt"

[dependencies]
lt-rs = "0.1.0"
rclite = "0.3.0"
tokio = { version = "1.47.1", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "net",
] }
tracing = "0.1.41"

[features]
default = []
lto = ["lt-rs/lto"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
