[package]
name = "anawt"
version = "0.1.0"
edition = "2024"
authors = ["Pedro Liduino <liduinopedro@gmail.com>"]
description = "Easy to use torrent client to embed in your applications"
repository = "https://github.com/pliduino/anawt"
license = "MIT"
keywords = ["libtorrent", "bittorrent", "torrent"]
readme = "README.md"

[dependencies]
lt-rs = "0.1.0"
rclite = "0.3.0"
tokio = { version = "1.47.1", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "net",
] }
tracing = "0.1.41"

[features]
default = []
lto = ["lt-rs/lto"]
