[package]
name = "anawt"
version = "0.1.1"
edition = "2024"
authors = ["Pedro Liduino <liduinopedro@gmail.com>"]
description = "Easy to use torrent client to embed in your applications"
repository = "https://github.com/pliduino/anawt"
license = "MIT"
keywords = ["libtorrent", "bittorrent", "torrent"]
readme = "README.md"

[dependencies]
error_set = "0.9.1"
# lt-rs = "0.1.2"
lt-rs = { git = "https://github.com/pliduino/lt-rs", branch = "develop" }
rclite = "0.3.0"
tokio = { version = "1.47.1", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "net",
    "time"
] }
tracing = "0.1.41"

[features]
default = []
lto = ["lt-rs/lto"]
